[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/AddEntries.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/IntakeMonitor.gd" type="Script" id=2]
[ext_resource path="res://scenes/EditTreeItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/EditTreeItem_Number.tscn" type="PackedScene" id=4]

[node name="IntakeMonitor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 10
custom_constants/margin_left = 25
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 10.0
margin_right = 487.0
margin_bottom = 590.0
ratio = 0.85

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/AspectRatioContainer"]
margin_left = -1.52588e-05
margin_top = 18.2353
margin_right = 462.0
margin_bottom = 561.765

[node name="Entries" type="Tree" parent="MarginContainer/AspectRatioContainer/VSplitContainer"]
unique_name_in_owner = true
margin_right = 462.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 275 )
columns = 2
column_titles_visible = true
hide_root = true
select_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/VSplitContainer"]
margin_top = 287.0
margin_right = 462.0
margin_bottom = 543.529

[node name="SumLabel" type="Label" parent="MarginContainer/AspectRatioContainer/VSplitContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 462.0
margin_bottom = 18.0
text = "Sum Default Intake: 0 / 9000"
align = 1

[node name="AddEntries" parent="MarginContainer/AspectRatioContainer/VSplitContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 22.0
margin_right = 462.0
margin_bottom = 175.0

[node name="Delay" type="Timer" parent="MarginContainer"]
wait_time = 0.3
one_shot = true

[node name="ExcScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )

[node name="EditItem" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.474
anchor_bottom = 0.254
margin_left = 25.0
margin_top = 10.0
margin_right = -157.688
margin_bottom = -112.4

[node name="EditAmount" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false
cancel_on_focusout = true

[node name="ConfirmClose" type="ConfirmationDialog" parent="."]
margin_left = 25.0
margin_top = 10.0
margin_right = 437.0
margin_bottom = 570.0
resizable = true
dialog_text = "Close this intake? All entries in this tab will be deleted."

[connection signal="button_pressed" from="MarginContainer/AspectRatioContainer/VSplitContainer/Entries" to="." method="_on_Entries_button_pressed"]
[connection signal="edited_tree_item" from="EditItem" to="." method="_on_EditItem_edited_tree_item"]
[connection signal="edited_tree_item" from="EditAmount" to="." method="_on_EditAmount_edited_tree_item"]
[connection signal="confirmed" from="ConfirmClose" to="MarginContainer" method="_on_ConfirmationDialog_confirmed"]
